Structured network message data2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(Socket)
 set(CMAKE_CXX_STANDARD 17)
 link_libraries(ws2_32 wsock32)
 
-add_executable(Socket main.cpp )
+add_executable(Socket main.cpp DataStruct.h)
 add_executable(server server/server.cpp)
 add_executable(client client/client.cpp)
