select function(Non-blocking) client thread

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(Socket)
 
 set(CMAKE_CXX_STANDARD 17)
 link_libraries(ws2_32 wsock32)
+set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
 
 add_executable(Socket main.cpp DataStruct.h)
 add_executable(server server/server.cpp)
