Single-threaded select model 10000 connection test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ link_libraries(ws2_32 wsock32)
 set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
 
 
-add_executable(Socket main.cpp DataStruct.h)
-add_executable(server server/server.cpp server/SocketServer.cpp server/SocketServer.h)
-add_executable(client client/client.cpp client/SocketClient.cpp client/SocketClient.h)
+add_executable(Socket main.cpp DataStruct.h )
+add_executable(server server/server.cpp server/SocketServer.cpp server/SocketServer.h ext/CELLTimestamp.cpp ext/CELLTimestamp.h)
+add_executable(client client/client.cpp client/SocketClient.cpp client/SocketClient.h )
+
